--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"prettier-plugin-tailwindcss": "^0.5.9",
+		"prisma": "^5.11.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"sveltekit-superforms": "^2.10.5",
 		"tailwindcss": "^3.3.6",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
@@ -49,14 +51,24 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@prisma/client": "^5.11.0",
 		"@supabase/supabase-js": "^2.39.1",
 		"apexcharts": "^3.47.0",
+		"bits-ui": "^0.20.0",
 		"bufferutil": "^4.0.8",
+		"clsx": "^2.1.0",
 		"d3": "^7.8.5",
 		"flowbite-datepicker": "^1.2.6",
+		"formsnap": "^0.5.1",
 		"fusioncharts": "^3.21.1",
 		"lucide-svelte": "^0.299.0",
+		"mode-watcher": "^0.3.0",
 		"month-utils": "^0.8.2",
-		"utf-8-validate": "^6.0.3"
+		"svelte-radix": "^1.1.0",
+		"svelte-sonner": "^0.3.19",
+		"tailwind-merge": "^2.2.2",
+		"tailwind-variants": "^0.2.1",
+		"utf-8-validate": "^6.0.3",
+		"zod": "^3.22.4"
 	}
 }
