--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"postinstall": "prisma generate",
 		"preview": "vite preview",
 		"test": "npm run test:integration && npm run test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -13,7 +12,8 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
 		"test:integration": "playwright test",
-		"test:unit": "vitest"
+		"test:unit": "vitest",
+		"postinstall": "prisma generate"
 	},
 	"devDependencies": {
 		"@fontsource/merriweather": "^5.0.8",
@@ -39,7 +39,7 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"prettier-plugin-tailwindcss": "^0.5.9",
-		"prisma": "^5.11.0",
+		"prisma": "^5.14.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"sveltekit-superforms": "^2.10.5",
@@ -51,7 +51,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@prisma/client": "^5.11.0",
+		"@prisma/client": "^5.14.0",
 		"@supabase/supabase-js": "^2.39.1",
 		"apexcharts": "^3.47.0",
 		"bits-ui": "^0.20.0",
